# utils

./: README.md
7kaa/tarball/autotools/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
7kaa/tarball/autotools/docs/: Makefile.am
7kaa/tarball/autotools/encyc/: Makefile.am
7kaa/tarball/autotools/encyc/firm/: Makefile.am
7kaa/tarball/autotools/encyc/god/: Makefile.am
7kaa/tarball/autotools/encyc/monster/: Makefile.am
7kaa/tarball/autotools/encyc/seat/: Makefile.am
7kaa/tarball/autotools/encyc/unit/: Makefile.am
7kaa/tarball/autotools/encyc2/: Makefile.am
7kaa/tarball/autotools/encyc2/god/: Makefile.am
7kaa/tarball/autotools/encyc2/seat/: Makefile.am
7kaa/tarball/autotools/encyc2/unit/: Makefile.am
7kaa/tarball/autotools/image/: Makefile.am
7kaa/tarball/autotools/misc/: Makefile.am
7kaa/tarball/autotools/music/: Makefile.am
7kaa/tarball/autotools/resource/: Makefile.am
7kaa/tarball/autotools/scenari2/: Makefile.am
7kaa/tarball/autotools/scenario/: Makefile.am
7kaa/tarball/autotools/sound/: Makefile.am
7kaa/tarball/autotools/sprite/: Makefile.am
7kaa/tarball/autotools/tutorial/: Makefile.am
aafm/: .gitignore  README.md  aafm  setup.py
abcde-rename/: .gitignore  deb-resources  dn-abcde-rename  dn-abcde-rename.1  dn-abcde-rename_0.7-1_all.deb  dn-abcde-rename_0.8-1_all.deb
adb-copy/: bashcomp  deb-resources  dn-adb-copy  dn-adb-copy.1  dn-adb-copy_0.9-1_all.deb  install-file
alsa-device/: add-new-device
alsa-device/tarball/autotools/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
b64/tarball/autotools/: Makefile.am  configure.ac
backup/: .gitignore  deb-resources  dn-backup
backup-hidden/: backhidden  deb-resources  dn-backup-hidden  dn-backup-hidden.1  dn-backup-hidden_1.2-1_all.deb  dn-backup-hidden_1.3-1_all.deb  dn-backup-hiddenrc
base64-image/: deb-resources  dn-base64-image  dn-base64-image.1  dn-base64-image_0.5-1_all.deb  dn-base64-image_0.6-1_all.deb
build-deb/: .gitignore  Makefile.am.example  configure.ac.example  deb-resources  dn-build-deb  dn-build-deb.1  dn-build-deb_2.12-1_all.deb  dn-build-debrc
build-perl-mod-deb/: deb-resources  dn-build-perl-mod-deb  dn-build-perl-mod-deb.1  dn-build-perl-mod-deb.bak  dn-build-perl-mod-deb_0.9.1-1_all.deb  dn-build-perl-mod-deb_0.9.3-1_all.deb  dn-build-perl-mod-deb_0.9.4-1_all.deb  dn-build-perl-mod-deb_0.9.5-1_all.deb
build-repository/: deb-resources  dn-build-repository  dn-build-repository.1
code2color/: deb-resources
colour/: deb-resources  dn-colour-bash  dn-colour-bash.1  dn-colour-bash_1.1-1_all.deb
consolebrowser/: deb-resources  dn-consolebrowser  dn-consolebrowser.1  dn-consolebrowser_1.4-1.dsc  dn-consolebrowser_1.4-1_all.deb  dn-consolebrowserrc
convert-moby/: deb-resources  dn-convert-moby  dn-convert-moby.1  dn-convert-moby_0.5-1_all.deb  dn-convert-moby_0.6-1_all.deb
cronsudo/: .gitignore
cronsudo/tarball/autotools/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
ctags-conf/tarball/autotools/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
debian-iso-update/: .gitignore  deb-resources  dn-debian-iso-update  dn-debian-iso-update.1  dn-debian-iso-update.rc  dn-debian-iso-update_0.2-1_all.deb  dn-debian-iso-update_0.4-1_all.deb  dn-debian-iso-update_0.7-1_all.deb  install
dl-podcast-files/: deb-resources  dn-dl-podcast-files  dn-dl-podcast-files.1  dn-dl-podcast-files_0.2-1_all.deb  dn-dl-podcast-files_0.3-1_all.deb
docbook-tables/: deb-resources  dn-dbtables  dn-dbtables.1  dn-dbtables_0.2-1.dsc  dn-dbtables_0.2-1_all.deb  install-file
exe-debian-package/: .gitignore  deb-resources  dn-exe-debian-package  dn-exe-debian-package.1  dn-exe-debian-package_0.2-1_all.deb  dn-exe-debian-package_0.3-1_all.deb
extract-pdf-pages/: deb-resources  dn-extract-pdf-pages  dn-extract-pdf-pages.1  dn-extract-pdf-pages_0.2-1_all.deb  dn-extract-pdf-pages_0.3-1_all.deb  install
festival-planner/: deb-resources  dn-festival-planner  dn-festival-planner.1  dn-festival-planner_0.2-1_all.deb  dn-festival-planner_0.3-1.dsc  dn-festival-planner_0.3-1_all.deb
find-cursor/: README.md
fonts-with-glyph/: deb-resources  fonts-with-glyph
html2ebooks/: deb-resources  dn-html2ebooks  dn-html2ebooks.1  dn-html2ebooks.sh  dn-html2ebooks_0.3-1_all.deb  dn-html2ebooks_0.4-1_all.deb  dn-html2ebooks_0.5-1_all.deb
html2md/: html2md
id3v2-output-to-script/: .gitignore  deb-resources  dn-id3v2-output-to-script  dn-id3v2-output-to-script.1  dn-id3v2-output-to-script_0.3-1_all.deb  dn-id3v2-output-to-script_0.4-1_all.deb  dn-id3v2-output-to-script_0.5-1_all.deb  getArtwork.pl
images-to-pdf/: deb-resources  dn-images-to-pdf  dn-images-to-pdf.1  dn-images-to-pdf_0.2-1_all.deb  dn-images-to-pdf_0.3-1_all.deb
keep-awake/: .gitignore  deb-resources  dn-keep-awake  dn-keep-awake-manual  dn-keep-awake-manual.1  dn-keep-awake.1  dn-keep-awake.xpm  dn-keep-awake_0.8-1_all.deb  install-file
kindlegen/: deb-resources  kindlegen.1
lesspipe-update/: deb-resources  dn-lesspipe-update  dn-lesspipe-update.1
list-luatex-fonts/: deb-resources  dn-list-luatex-fonts  dn-list-luatex-fonts.1  dn-list-luatex-fonts_0.2-1_all.deb
load-clipboard/: deb-resources  dn-load-clipboard  dn-load-clipboard.1  dn-load-clipboard_0.2-1_all.deb  dn-load-clipboard_0.4-1_all.deb  dn-load-clipboard_0.5-1_all.deb  dn-load-clipboard_0.7-1_all.deb
mail-dir-monitor/tarball/autotools/: Makefile.am  configure.ac
mc-conf/tarball/autotools/: .configure.ac.un~  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
menu-select/: deb-resources  dn-menu-select  dn-menu-select.1  dn-menu-select_0.2-1_all.deb  install
mp3-library-analyse/: deb-resources  dn-mp3-library-analyse  dn-mp3-library-analyse.1  dn-mp3-library-analyse_0.3-1_all.deb  (+2 more)
mp3-tags/: dn-mp3-tags  (+4 more)
podcasts-rss/tarball/autotools/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  configure.ac
update-local-apt-repository/tarball/autotools/: Makefile.am  configure.ac
wkhtmltopdf-static/tarball/autotools/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
(+599 files in other folders)
